--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
